--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -36,6 +36,250 @@
     <div class="vert-text" style="padding-bottom: 80px;">
         <div><img src="image/xm.png" style="width: 150px;"></div>
         <h2 style="font-size: 50px;">彭小叶</h2>
-        <h3>3年前端开发+3年UI设计，负责过大型项目，深厚的美工功底</h3>
+        <h3>3年前端开发+7年UI设计，负责过大型项目，深厚的美工功底</h3>
         <h4>web前端高级工程师&nbsp;&nbsp;&nbsp;&nbsp;上海易居中国控股有限公司</h4>
-        <h4>女&nbsp;&nbsp;&nbsp;&nbsp本科&nbsp;&nbsp;&nbsp;&nbsp;6年以上工作
+        <h4>女&nbsp;&nbsp;&nbsp;&nbsp本科&nbsp;&nbsp;&nbsp;&nbsp;10年以上工作经验&nbsp;&nbsp;&nbsp;&nbsp;上海</h4>
+        <h4>18917539363&nbsp;&nbsp;&nbsp;&nbsp;pxm928@126.com</h4>
+        <a href="#about" class="scroll-down nav-link"></a>
+    </div>
+</header>
+
+<section id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2 text-center">
+                <h2 class="major">个人简介</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 text-center" style="padding: 10px 0 20px">
+                <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <p class="text-left" style="font-size: 16px;line-height: 30px; margin-right: 15px">web前端开发工程师兼高级UI设计师，曾带过十人左右的设计部和前端开发团队，主要负责管理项目进度， 控制团队整体的效率、代码产出水平和规范，优化页面整体效果，制作标准化代码，多界面平台的兼容性，提高用户体验，丰富前端交互体验。</p>
+                    <p class="text-left" style="font-size: 16px;line-height: 30px; margin-right: 15px">熟悉ES6、Nodejs、Express、Webpack、Npm、Grunt、Gulp、Canvas、Bootstrap、Less、Ionic、Ajax、EasyUI、Git等，精通Html5+Css3布局，能熟练使用javascript、jQuery等脚本语言， 实现设计要求的动态效果，对网页的视觉呈现和用户体验有独到的理解，有多个Vue、Angular开发经验。</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 text-center" style="padding: 10px 0 20px">
+                <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <h3 style="background-color: #72a187;display: inline-block;padding: 10px;border-radius: 10px;">工作经历</h3>
+                    <h4 style="text-align: left;color: #292d48">上海易居中国控股有限公司&nbsp;&nbsp;&nbsp;&nbsp;2016.05 — 2016.12</h4>
+                    <p class="text-left" style="font-size: 14px;color:rgba(0,0,0,.5);line-height: 30px; margin-right: 15px">主要负责公司标准版原型项目前端开发，编写全站页面，包括前台展示页面和后台管理页面，后端给接口实现所有数据交互效果。主要运用Nodejs、Express、Webpack、Npm，Canvas，Less ，Ajax，AngularJS，Vue，Bootstrap，Javascript，jQuery 技术开发和打包，以及对已有网站进行整体优化，提高用户体验</p><br>
+
+
+                    <h4 style="text-align: left;color: #292d48">上海学尔森学院&nbsp;&nbsp;&nbsp;&nbsp;2014.03 — 2016.04</h4>
+                    <p class="text-left" style="font-size: 14px;color:rgba(0,0,0,.5);line-height: 30px; margin-right: 15px">负责管理项目进度，部门人员工作分配协调，控制团队整体的效率、代码产出水平和规范，优化页面整体效果，多界面平台的兼容性，提高用户体验，丰富前端交互体验，使用AngularJS，Canvas，Less ，Ajax，Webpack、Npm开发、根据产品经理给出的需求和UI设计师给出的设计稿进行所有前端开发，完成数据交互，根据测试提出的BUG进行修改，以及完成部门经理布置的其他任务。</p><br>
+
+
+                    <h4 style="text-align: left;color: #292d48">上海用易信息技术有限公司&nbsp;&nbsp;&nbsp;&nbsp;2008.05 — 2013.03</h4>
+                    <p class="text-left" style="font-size: 14px;color:rgba(0,0,0,.5);line-height: 30px; margin-right: 15px">首席网页设计师,主要负责公司设计部有关网站的策划、页面设计和制作，以及使用JS、jQuery等脚本语言， 实现设计要求的动态效果。在职期间曾设计过上海南站网上售票系统开发，上海公拍网在线竞拍系统，全国特种作业证件查询系统，农民工考职培训系统，拍卖行业协会系统，化救通网站，化工职业病防治院网站，安全生产远程教育系统，安易通网站，北外滩开业园区系统等等</p><br>
+
+
+                    <h4 style="text-align: left;color: #292d48">中国第一纺织网&nbsp;&nbsp;&nbsp;&nbsp;2006.03 — 2008.03</h4>
+                    <p class="text-left" style="font-size: 14px;color:rgba(0,0,0,.5);line-height: 30px; margin-right: 15px">主要负责第一纺织网内部所有网站的前台建设与维护，包括主网站，各大频道的美工策划与设计(商务中心，新闻频道，进出口频道，原料频道，统计频道，贸易频道等几十个频道)。</p><br>
+
+
+                    <h4 style="text-align: left;color: #292d48">中国万网广州公司&nbsp;&nbsp;&nbsp;&nbsp;2003.03 — 2006.01</h4>
+                    <p class="text-left" style="font-size: 14px;color:rgba(0,0,0,.5);line-height: 30px; margin-right: 15px">负责企业网站策划、设计、切图、排版、改版，对网页的风格、色彩、布局设计，图片美化处理，在职期间设计过各行各业大大小小企业网站近上百家。</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="projects">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 text-center">
+                <h2 class="major">我的项目</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/wchat.png" class="icon" style="height:250px;">
+                    <h4><a href="https://pxm928.github.io/WeChatGame/index.html" target="_blank">微信H5游戏&打怪游戏</a></h4>
+                    <p>微信H5游戏 , 技术栈：1.HTML5 , 2.CSS3 , 3.JAVASCRIPT , 4.JQUERY , 5.canvas 用了H5新标签canvas和JS完美结合。</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/2048.png" class="icon" style="height:250px;">
+                    <h4><a href="./demo/2048-master/index.html" target="_blank">2048小游戏</a></h4>
+                    <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
+                </div>
+            </div>
+            <!--<div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/xiaole.png" class="icon" style="height:250px;">
+                    <h4><a href="./demo/xiaoxiaole/index.html" target="_blank">消消乐</a></h4>
+                    <p>消消乐快乐玩，<br>js原生实现基本逻辑功能,pc端观看<br><br></p>
+                </div>
+            </div>-->
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/app.jpg" class="icon" style="height:250px;">
+                    <h4><a href="https://pxm928.github.io/#/tabs/home" target="_blank">美食APP</a></h4>
+                    <p class="text-left">包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
+                </div>
+            </div>
+            <div class="col-md-4  text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/vr.jpg" class="icon" style="height:250px;">
+                    <h4><a href="./demo/vr/index2.html" target="_blank">仿购物节vr效果</a></h4>
+                    <p>简单的模拟了vr效果，需要在移动设备观看效果，来感受一下重力感应吧！<br><br></p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/SXChildDesk.jpg" class="icon" style="height:250px;">
+                    <h4><a href="https://pxm928.github.io/SXChildDesk/Index.html" target="_blank">绍兴少儿图书馆-桌面版</a></h4>
+                    <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/SXChildStar.jpg" class="icon" style="height:250px;">
+                    <h4><a href="https://pxm928.github.io/SXChildStar/Index.html" target="_blank">绍兴少儿图书馆-星球版</a></h4>
+                    <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4  col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/shu.png" class="icon" style="height:250px;">
+                    <h4><a href="demo/UserCenter/index.html" target="_blank">图书馆信息检索分享</a></h4>
+                    <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;width: 90%; margin-top: 20px;">
+                    <img src="image/vSchool.png" class="icon" style="height:250px;">
+                    <h4><a href="https://pxm928.github.io/EducpHtml/login" target="_blank">V校园</a></h4>
+                    <p>V校园,一款专业移动儿童管理软件，为幼儿园提供考勤、流程审核、活动管理等等。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/shouye.png" class="icon" style="height:250px;">
+                    <h4><a href="https://github.com/pxm928/APP-master" target="_blank">移动端APP</a></h4>
+                    <p>移动端商户信息、消费点评，类似大众点评</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/shouye.png" class="icon" style="height:250px;">
+                    <h4><a href="https://github.com/pxm928/MerchantAdmin-master" target="_blank">商家管理后台</a></h4>
+                    <p>这是一个基于vue开发的商家管理后台</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 text-center">
+                <h2 class="major">我的UI设计作品</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/hb06.jpg" class="icon" style="height:250px;">
+                    <h4><a href="http://huaban.com/boards/19959863/" target="_blank">企业网站,APP页面</a></h4>
+                </div>
+            </div>
+            <div class="col-md-4  text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/hb04.jpg" class="icon" style="height:250px;">
+                    <h4><a href="https://huaban.com/boards/28486678/" target="_blank">课程专题,移动端设计</a></h4>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/hb01.jpg" class="icon" style="height:250px;">
+                    <h4><a href="https://huaban.com/pins/641624854/" target="_blank">企业网站,APP页面</a></h4>
+                </div>
+            </div>
+            <div class="col-md-4  text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/hb03.jpg" class="icon" style="height:250px;">
+                    <h4><a href="https://huaban.com/pins/634923794/" target="_blank">课程专题,移动端设计</a></h4>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/hb02.jpg" class="icon" style="height:250px;">
+                    <h4><a href="http://huaban.com/pins/832604566/" target="_blank">企业网站,APP页面</a></h4>
+                </div>
+            </div>
+
+            <div class="col-md-4  text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/hb05.jpg" class="icon" style="height:250px;">
+                    <h4><a href="http://huaban.com/wur0xpbt9u/" target="_blank">课程专题,移动端设计</a></h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer id="contacts">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 text-center">
+                <h3>You can contact me on</h3>
+                <ul class="list-inline social">
+                    <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s"
+                        style="animation-delay: 0s;"><a href="https://pxm928.github.io/HomePage/"><i
+                            class="fa fa-github fa-2x"></i></a></li>
+                    <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s"
+                        style="animation-delay: 0s;"><a target="_blank"
+                                                        href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=u4qLjomOjo2Kior7ysqV2NTW"
+                                                        style="text-decoration:none;"><i class="fa fa-qq fa-2x"></i></a>
+                    </li>
+                    <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s"
+                        style="animation-delay: 0s;"><a target="_blank"
+                                                        href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=u4qLjomOjo2Kior7ysqV2NTW"
+                                                        style="text-decoration:none;"><i class="fa fa-weixin fa-2x"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+<script src='js/jquery.min.js'></script>
+<script src='js/bootstrap.min.js'></script>
+<script src='js/particles.min.js'></script>
+<script src="js/index.js"></script>
+</body>
+</html>
